--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         <a href="#">Contact</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2023 <a href="#">SIBA Dynamics</a> Design By : 
-					<a target="_blank" href="https://razorisuru.com/">RaZoR</a></p>
+					<a target="_blank" href="https://razorisuru.com/">B35 Solutions</a></p>
                 </div>
             </div>
         </div><!-- end container -->
