--- a/index.html
+++ b/index.html
@@ -576,12 +576,12 @@
 				<a href="#"><img src="images/logo-2.png" width="300px" alt="" /></a>
                 <div class="footer-center">
                     <p class="footer-links">
-                        <a href="#">Home</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Pricing</a>
-                        <a href="#">About</a>
-                        <a href="#">Faq</a>
-                        <a href="#">Contact</a>
+						<a class="nav-link js-scroll-trigger" href="#home">Home</a>
+                        <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
+                        <a class="nav-link js-scroll-trigger"href="#pricing">Pricing</a>
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="#faq">Faq</a>
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2023 <a href="#">SIBA Dynamics</a> Design By : 
 					<a target="_blank" href="https://razorisuru.com/">RaZoR</a></p>
